Add a second resource into people.js launched by json-server

--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -25,5 +25,6 @@
         <input [(ngModel)]="selectedPerson.name"/>
         <input [(ngModel)]="selectedPerson.surname"/>
         <input [(ngModel)]="selectedPerson.mail"/> 
-        <button (click)="save()">Save</button>
+        <button (click)="save('people')">SavePPl</button>
 </div> 
+
