Add filter services and marketconf service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-people></app-people>
-<app-other></app-other>
+<!-- <app-people></app-people>
+<app-other></app-other> -->
+<app-market-conf></app-market-conf>
+<app-filter></app-filter>
